--- a/index2.html
+++ b/index2.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	 <meta name="viewport" content="wight=device-wight, initial-scale=1">
 	 <meta name="viewport" content="wight=device-wight, initial-scale=1">
-	<title>Тест</title>
+	<title>Футбол News</title>
 	<link rel="stylesheet" href="css/style2.css">
 	<link rel="stylesheet" href="css/bootstrap-grid.min.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"> 
